# Roguelike

./: .gitignore  CMakeLists.txt  README.md  diagramme.puml  main.cpp  roguelike
assets/: map.txt  map_overlay.txt
src/: AssetManager.cpp  AssetManager.hpp  Bonus.cpp  Bonus.hpp  CMakeLists.txt  CardsManager.cpp  CardsManager.hpp  ColliderComponent.hpp  CollisionManager.cpp  CollisionManager.hpp  Component.hpp  Components.hpp  Entity.hpp  GameManager.cpp  GameManager.hpp  HealthComponent.hpp  IAControllerComponent.hpp  KeyboardController.hpp  Map.cpp  Map.hpp  ProjectileComponent.hpp  SoundManager.cpp  SoundManager.hpp  SpriteComponent.hpp  StatisticsComponent.hpp  TextureManager.cpp  TextureManager.hpp  TransformComponent.hpp  UILabelComponent.hpp  main.cpp  test_map  test_map.cpp
tests/: CMakeLists.txt  test_assetmanager.cpp  test_bonus.cpp  test_collidercomponent.cpp  test_entity.cpp  test_gamemanager.cpp  test_healthcomponent.cpp  test_projectile.cpp  test_spritecomponent.cpp  test_transformcomponent.cpp
